--- a/pandas/countries_df.ipynb
+++ b/pandas/countries_df.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -11,7 +11,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -186,6 +186,271 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>name</th>\n",
+       "      <th>topLevelDomain</th>\n",
+       "      <th>alpha2Code</th>\n",
+       "      <th>alpha3Code</th>\n",
+       "      <th>callingCodes</th>\n",
+       "      <th>capital</th>\n",
+       "      <th>altSpellings</th>\n",
+       "      <th>region</th>\n",
+       "      <th>subregion</th>\n",
+       "      <th>population</th>\n",
+       "      <th>...</th>\n",
+       "      <th>timezones</th>\n",
+       "      <th>borders</th>\n",
+       "      <th>nativeName</th>\n",
+       "      <th>numericCode</th>\n",
+       "      <th>currencies</th>\n",
+       "      <th>languages</th>\n",
+       "      <th>translations</th>\n",
+       "      <th>flag</th>\n",
+       "      <th>regionalBlocs</th>\n",
+       "      <th>cioc</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>48</th>\n",
+       "      <td>China</td>\n",
+       "      <td>[.cn]</td>\n",
+       "      <td>CN</td>\n",
+       "      <td>CHN</td>\n",
+       "      <td>[86]</td>\n",
+       "      <td>Beijing</td>\n",
+       "      <td>[CN, Zhōngguó, Zhongguo, Zhonghua, People's Re...</td>\n",
+       "      <td>Asia</td>\n",
+       "      <td>Eastern Asia</td>\n",
+       "      <td>1377422166</td>\n",
+       "      <td>...</td>\n",
+       "      <td>[UTC+08:00]</td>\n",
+       "      <td>[AFG, BTN, MMR, HKG, IND, KAZ, PRK, KGZ, LAO, ...</td>\n",
+       "      <td>中国</td>\n",
+       "      <td>156.0</td>\n",
+       "      <td>[{'code': 'CNY', 'name': 'Chinese yuan', 'symb...</td>\n",
+       "      <td>[{'iso639_1': 'zh', 'iso639_2': 'zho', 'name':...</td>\n",
+       "      <td>{'de': 'China', 'es': 'China', 'fr': 'Chine', ...</td>\n",
+       "      <td>https://restcountries.eu/data/chn.svg</td>\n",
+       "      <td>[]</td>\n",
+       "      <td>CHN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>104</th>\n",
+       "      <td>India</td>\n",
+       "      <td>[.in]</td>\n",
+       "      <td>IN</td>\n",
+       "      <td>IND</td>\n",
+       "      <td>[91]</td>\n",
+       "      <td>New Delhi</td>\n",
+       "      <td>[IN, Bhārat, Republic of India, Bharat Ganrajya]</td>\n",
+       "      <td>Asia</td>\n",
+       "      <td>Southern Asia</td>\n",
+       "      <td>1295210000</td>\n",
+       "      <td>...</td>\n",
+       "      <td>[UTC+05:30]</td>\n",
+       "      <td>[AFG, BGD, BTN, MMR, CHN, NPL, PAK, LKA]</td>\n",
+       "      <td>भारत</td>\n",
+       "      <td>356.0</td>\n",
+       "      <td>[{'code': 'INR', 'name': 'Indian rupee', 'symb...</td>\n",
+       "      <td>[{'iso639_1': 'hi', 'iso639_2': 'hin', 'name':...</td>\n",
+       "      <td>{'de': 'Indien', 'es': 'India', 'fr': 'Inde', ...</td>\n",
+       "      <td>https://restcountries.eu/data/ind.svg</td>\n",
+       "      <td>[{'acronym': 'SAARC', 'name': 'South Asian Ass...</td>\n",
+       "      <td>IND</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>239</th>\n",
+       "      <td>United States of America</td>\n",
+       "      <td>[.us]</td>\n",
+       "      <td>US</td>\n",
+       "      <td>USA</td>\n",
+       "      <td>[1]</td>\n",
+       "      <td>Washington, D.C.</td>\n",
+       "      <td>[US, USA, United States of America]</td>\n",
+       "      <td>Americas</td>\n",
+       "      <td>Northern America</td>\n",
+       "      <td>323947000</td>\n",
+       "      <td>...</td>\n",
+       "      <td>[UTC-12:00, UTC-11:00, UTC-10:00, UTC-09:00, U...</td>\n",
+       "      <td>[CAN, MEX]</td>\n",
+       "      <td>United States</td>\n",
+       "      <td>840.0</td>\n",
+       "      <td>[{'code': 'USD', 'name': 'United States dollar...</td>\n",
+       "      <td>[{'iso639_1': 'en', 'iso639_2': 'eng', 'name':...</td>\n",
+       "      <td>{'de': 'Vereinigte Staaten von Amerika', 'es':...</td>\n",
+       "      <td>https://restcountries.eu/data/usa.svg</td>\n",
+       "      <td>[{'acronym': 'NAFTA', 'name': 'North American ...</td>\n",
+       "      <td>USA</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>105</th>\n",
+       "      <td>Indonesia</td>\n",
+       "      <td>[.id]</td>\n",
+       "      <td>ID</td>\n",
+       "      <td>IDN</td>\n",
+       "      <td>[62]</td>\n",
+       "      <td>Jakarta</td>\n",
+       "      <td>[ID, Republic of Indonesia, Republik Indonesia]</td>\n",
+       "      <td>Asia</td>\n",
+       "      <td>South-Eastern Asia</td>\n",
+       "      <td>258705000</td>\n",
+       "      <td>...</td>\n",
+       "      <td>[UTC+07:00, UTC+08:00, UTC+09:00]</td>\n",
+       "      <td>[TLS, MYS, PNG]</td>\n",
+       "      <td>Indonesia</td>\n",
+       "      <td>360.0</td>\n",
+       "      <td>[{'code': 'IDR', 'name': 'Indonesian rupiah', ...</td>\n",
+       "      <td>[{'iso639_1': 'id', 'iso639_2': 'ind', 'name':...</td>\n",
+       "      <td>{'de': 'Indonesien', 'es': 'Indonesia', 'fr': ...</td>\n",
+       "      <td>https://restcountries.eu/data/idn.svg</td>\n",
+       "      <td>[{'acronym': 'ASEAN', 'name': 'Association of ...</td>\n",
+       "      <td>INA</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>31</th>\n",
+       "      <td>Brazil</td>\n",
+       "      <td>[.br]</td>\n",
+       "      <td>BR</td>\n",
+       "      <td>BRA</td>\n",
+       "      <td>[55]</td>\n",
+       "      <td>Brasília</td>\n",
+       "      <td>[BR, Brasil, Federative Republic of Brazil, Re...</td>\n",
+       "      <td>Americas</td>\n",
+       "      <td>South America</td>\n",
+       "      <td>206135893</td>\n",
+       "      <td>...</td>\n",
+       "      <td>[UTC-05:00, UTC-04:00, UTC-03:00, UTC-02:00]</td>\n",
+       "      <td>[ARG, BOL, COL, GUF, GUY, PRY, PER, SUR, URY, ...</td>\n",
+       "      <td>Brasil</td>\n",
+       "      <td>76.0</td>\n",
+       "      <td>[{'code': 'BRL', 'name': 'Brazilian real', 'sy...</td>\n",
+       "      <td>[{'iso639_1': 'pt', 'iso639_2': 'por', 'name':...</td>\n",
+       "      <td>{'de': 'Brasilien', 'es': 'Brasil', 'fr': 'Bré...</td>\n",
+       "      <td>https://restcountries.eu/data/bra.svg</td>\n",
+       "      <td>[{'acronym': 'USAN', 'name': 'Union of South A...</td>\n",
+       "      <td>BRA</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>5 rows × 24 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                         name topLevelDomain alpha2Code alpha3Code  \\\n",
+       "48                      China          [.cn]         CN        CHN   \n",
+       "104                     India          [.in]         IN        IND   \n",
+       "239  United States of America          [.us]         US        USA   \n",
+       "105                 Indonesia          [.id]         ID        IDN   \n",
+       "31                     Brazil          [.br]         BR        BRA   \n",
+       "\n",
+       "    callingCodes           capital  \\\n",
+       "48          [86]           Beijing   \n",
+       "104         [91]         New Delhi   \n",
+       "239          [1]  Washington, D.C.   \n",
+       "105         [62]           Jakarta   \n",
+       "31          [55]          Brasília   \n",
+       "\n",
+       "                                          altSpellings    region  \\\n",
+       "48   [CN, Zhōngguó, Zhongguo, Zhonghua, People's Re...      Asia   \n",
+       "104   [IN, Bhārat, Republic of India, Bharat Ganrajya]      Asia   \n",
+       "239                [US, USA, United States of America]  Americas   \n",
+       "105    [ID, Republic of Indonesia, Republik Indonesia]      Asia   \n",
+       "31   [BR, Brasil, Federative Republic of Brazil, Re...  Americas   \n",
+       "\n",
+       "              subregion  population  ...  \\\n",
+       "48         Eastern Asia  1377422166  ...   \n",
+       "104       Southern Asia  1295210000  ...   \n",
+       "239    Northern America   323947000  ...   \n",
+       "105  South-Eastern Asia   258705000  ...   \n",
+       "31        South America   206135893  ...   \n",
+       "\n",
+       "                                             timezones  \\\n",
+       "48                                         [UTC+08:00]   \n",
+       "104                                        [UTC+05:30]   \n",
+       "239  [UTC-12:00, UTC-11:00, UTC-10:00, UTC-09:00, U...   \n",
+       "105                  [UTC+07:00, UTC+08:00, UTC+09:00]   \n",
+       "31        [UTC-05:00, UTC-04:00, UTC-03:00, UTC-02:00]   \n",
+       "\n",
+       "                                               borders     nativeName  \\\n",
+       "48   [AFG, BTN, MMR, HKG, IND, KAZ, PRK, KGZ, LAO, ...             中国   \n",
+       "104           [AFG, BGD, BTN, MMR, CHN, NPL, PAK, LKA]           भारत   \n",
+       "239                                         [CAN, MEX]  United States   \n",
+       "105                                    [TLS, MYS, PNG]      Indonesia   \n",
+       "31   [ARG, BOL, COL, GUF, GUY, PRY, PER, SUR, URY, ...         Brasil   \n",
+       "\n",
+       "     numericCode                                         currencies  \\\n",
+       "48         156.0  [{'code': 'CNY', 'name': 'Chinese yuan', 'symb...   \n",
+       "104        356.0  [{'code': 'INR', 'name': 'Indian rupee', 'symb...   \n",
+       "239        840.0  [{'code': 'USD', 'name': 'United States dollar...   \n",
+       "105        360.0  [{'code': 'IDR', 'name': 'Indonesian rupiah', ...   \n",
+       "31          76.0  [{'code': 'BRL', 'name': 'Brazilian real', 'sy...   \n",
+       "\n",
+       "                                             languages  \\\n",
+       "48   [{'iso639_1': 'zh', 'iso639_2': 'zho', 'name':...   \n",
+       "104  [{'iso639_1': 'hi', 'iso639_2': 'hin', 'name':...   \n",
+       "239  [{'iso639_1': 'en', 'iso639_2': 'eng', 'name':...   \n",
+       "105  [{'iso639_1': 'id', 'iso639_2': 'ind', 'name':...   \n",
+       "31   [{'iso639_1': 'pt', 'iso639_2': 'por', 'name':...   \n",
+       "\n",
+       "                                          translations  \\\n",
+       "48   {'de': 'China', 'es': 'China', 'fr': 'Chine', ...   \n",
+       "104  {'de': 'Indien', 'es': 'India', 'fr': 'Inde', ...   \n",
+       "239  {'de': 'Vereinigte Staaten von Amerika', 'es':...   \n",
+       "105  {'de': 'Indonesien', 'es': 'Indonesia', 'fr': ...   \n",
+       "31   {'de': 'Brasilien', 'es': 'Brasil', 'fr': 'Bré...   \n",
+       "\n",
+       "                                      flag  \\\n",
+       "48   https://restcountries.eu/data/chn.svg   \n",
+       "104  https://restcountries.eu/data/ind.svg   \n",
+       "239  https://restcountries.eu/data/usa.svg   \n",
+       "105  https://restcountries.eu/data/idn.svg   \n",
+       "31   https://restcountries.eu/data/bra.svg   \n",
+       "\n",
+       "                                         regionalBlocs cioc  \n",
+       "48                                                  []  CHN  \n",
+       "104  [{'acronym': 'SAARC', 'name': 'South Asian Ass...  IND  \n",
+       "239  [{'acronym': 'NAFTA', 'name': 'North American ...  USA  \n",
+       "105  [{'acronym': 'ASEAN', 'name': 'Association of ...  INA  \n",
+       "31   [{'acronym': 'USAN', 'name': 'Union of South A...  BRA  \n",
+       "\n",
+       "[5 rows x 24 columns]"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df.sort_values('population', ascending=False).iloc[:5]"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 4,
    "metadata": {},
    "outputs": [
@@ -206,7 +471,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -223,7 +488,7 @@
        "Name: name, dtype: int64"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -262,7 +527,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -279,7 +544,7 @@
        "Name: area, dtype: float64"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
