--- a/admission/test_admission.ipynb
+++ b/admission/test_admission.ipynb
@@ -69,23 +69,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
      "name": "stdin",
      "output_type": "stream",
      "text": [
-      "Enter GRE  :   325\n",
-      "Enter Toefl:   115\n",
-      "Enter CGPA :   9.5\n"
+      "Enter GRE  :   290\n",
+      "Enter Toefl:   105\n",
+      "Enter CGPA :   7.4\n"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "89.9559733673864\n"
+      "47.9878884722967\n"
      ]
     }
    ],
@@ -94,7 +94,7 @@
     "gre = int(input(\"Enter GRE  :  \"))\n",
     "tof = int(input(\"Enter Toefl:  \"))\n",
     "cgpa = float(input(\"Enter CGPA :  \"))\n",
-    "chance = model.predict([[gre,tof,cgpa]])\n",
+    "chance = model.predict([[gre,tof,cgpa]]) # Matrix \n",
     "print(chance[0])"
    ]
   },
